init configs and add ollama to docker

--- a/.env.template
+++ b/.env.template
@@ -7,8 +7,8 @@ CONTENT_SOURCES=Twitter,Reddit,Article,Youtube,RSS
 #########################################
 # Notion options
 #########################################
-NOTION_TOKEN=
-NOTION_ENTRY_PAGE_ID=
+NOTION_TOKEN=secret_Rj7JexhzWrDeflZHYQZYwIhcehTeEDXGRAGB0bKTCpl
+NOTION_ENTRY_PAGE_ID=88606d30-d808-4f96-ab0b-2a223305e51f
 
 #########################################
 # LLM options
@@ -17,7 +17,7 @@ NOTION_ENTRY_PAGE_ID=
 # If pick openai, then use below OPENAI_MODEL and OPENAI_API_KEY
 # If pick google, then use below GOOGLE_MODEL and GOOGLE_API_KEY
 # If pick ollama, then use below OLLAMA_MODEL and OLLAMA_URL
-LLM_PROVIDER=openai
+LLM_PROVIDER=ollama
 
 # Ref: https://platform.openai.com/docs/models
 OPENAI_MODEL=gpt-4o-mini
@@ -28,7 +28,7 @@ OPENAI_API_KEY=
 GOOGLE_MODEL=gemini-1.5-flash-latest
 GOOGLE_API_KEY=
 
-OLLAMA_MODEL=llama3
+OLLAMA_MODEL=qwen2:7b
 
 ## Assume the default ollama service is running at localhost:11434
 ## Replace it with the actual ollama service url in your environment
@@ -44,7 +44,7 @@ OLLAMA_URL=http://localhost:11434
 # - OpenAI: 1536
 # - Ollama(nomic-embed-text): 768
 # - HF (all-MiniLM-L6-v2): 384
-EMBEDDING_PROVIDER=openai
+EMBEDDING_PROVIDER=bge-m3
 
 # models
 # - openai: text-embedding-ada-002, text-embedding-3-small, ...
@@ -59,7 +59,7 @@ TEXT_CHUNK_SIZE=10240
 TEXT_CHUNK_OVERLAP=256
 
 # For any summary, specific the translation language if needed
-TRANSLATION_LANG=
+TRANSLATION_LANG=vietnamese
 
 SUMMARY_MAX_LENGTH=20000
 
