--- a/install.env
+++ b/install.env
@@ -1,4 +1,5 @@
 export AIRFLOW_PROJ_DIR=$(WORKSPACE)/airflow
+export OLLAMA_PROJ_DIR=$(WORKSPACE)/ollama
 export POSTGRES_PROJ_DIR=$(WORKSPACE)/postgres
 export REDIS_PROJ_DIR=$(WORKSPACE)/redis
 export MYSQL_PROJ_DIR=$(WORKSPACE)/mysql
