fix the building docker compose

--- a/.env.template
+++ b/.env.template
@@ -2,7 +2,7 @@
 # Common options
 #########################################
 BOT_NETWORK_NAME=bot_network
-CONTENT_SOURCES=Twitter,Reddit,Article,Youtube,RSS
+CONTENT_SOURCES=Article,Youtube,RSS
 
 #########################################
 # Notion options
@@ -33,7 +33,7 @@ OLLAMA_MODEL=qwen2:7b
 ## Assume the default ollama service is running at localhost:11434
 ## Replace it with the actual ollama service url in your environment
 ##   if needed
-OLLAMA_URL=http://localhost:11434
+OLLAMA_URL=http://ollama:11434
 
 # The generic Text embedding provider. Supported providers:
 # openai, hf, hf_inst, ollama
@@ -44,14 +44,14 @@ OLLAMA_URL=http://localhost:11434
 # - OpenAI: 1536
 # - Ollama(nomic-embed-text): 768
 # - HF (all-MiniLM-L6-v2): 384
-EMBEDDING_PROVIDER=bge-m3
+EMBEDDING_PROVIDER=ollama
 
 # models
 # - openai: text-embedding-ada-002, text-embedding-3-small, ...
 # - ollama: nomic-embed-text, ...
 # - hf: all-MiniLM-L6-v2
 # - hf_inst: hkunlp/instructor-xl
-EMBEDDING_MODEL=text-embedding-ada-002
+EMBEDDING_MODEL=bge-m3
 
 EMBEDDING_MAX_LENGTH=5000
 
