--- a/.env.template.k8s
+++ b/.env.template.k8s
@@ -112,7 +112,7 @@ RSS_ENABLE_CLASSIFICATION=false
 #########################################
 # Milvus database
 #########################################
-MILVUS_HOST=auto-news-milvus
+MILVUS_HOST=news-summary-milvus
 MILVUS_PORT=19530
 
 # L2, IP, COSINE
@@ -121,7 +121,7 @@ MILVUS_SIMILARITY_METRICS=L2
 #########################################
 # MySQL database
 #########################################
-MYSQL_HOST=auto-news-mysql
+MYSQL_HOST=news-summary-mysql
 MYSQL_PORT=3306
 MYSQL_USER=bot
 MYSQL_PASSWORD=bot
@@ -130,7 +130,7 @@ MYSQL_DATABASE=bot
 #########################################
 # Redis options
 #########################################
-BOT_REDIS_URL=redis://:@auto-news-redis-master:6379/1
+BOT_REDIS_URL=redis://:@news-summary-redis-master:6379/1
 BOT_REDIS_KEY_EXPIRE_TIME=604800
 
 #########################################
