--- a/argocd/templates/app-auto-news.yaml
+++ b/argocd/templates/app-auto-news.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: auto-news
+  name: news-summary
   namespace: argocd
 spec:
   destination:
