--- a/.env.template
+++ b/.env.template
@@ -13,20 +13,7 @@ NOTION_ENTRY_PAGE_ID=dd478f61-b0e5-4eac-abf2-48d84af7d4c5
 #########################################
 # LLM options
 #########################################
-# The generic LLM provider, E.g. openai, google, ollama
-# If pick openai, then use below OPENAI_MODEL and OPENAI_API_KEY
-# If pick google, then use below GOOGLE_MODEL and GOOGLE_API_KEY
-# If pick ollama, then use below OLLAMA_MODEL and OLLAMA_URL
 LLM_PROVIDER=ollama
-
-# Ref: https://platform.openai.com/docs/models
-OPENAI_MODEL=gpt-4o-mini
-OPENAI_API_KEY=
-# OPENAI_PROXY=
-
-# gemini-pro | gemini-1.5-flash-latest | ...
-GOOGLE_MODEL=gemini-1.5-flash-latest
-GOOGLE_API_KEY=
 
 OLLAMA_MODEL=qwen2:7b
 
@@ -35,22 +22,9 @@ OLLAMA_MODEL=qwen2:7b
 ##   if needed
 OLLAMA_URL=http://ollama:11434
 
-# The generic Text embedding provider. Supported providers:
-# openai, hf, hf_inst, ollama
-#
-# **Attention**: Change embedding provider/model needs to re-create
-# embedding collections if the dimension is different.
-# Dimensions for different provider/model:
-# - OpenAI: 1536
-# - Ollama(nomic-embed-text): 768
-# - HF (all-MiniLM-L6-v2): 384
+
 EMBEDDING_PROVIDER=ollama
 
-# models
-# - openai: text-embedding-ada-002, text-embedding-3-small, ...
-# - ollama: nomic-embed-text, ...
-# - hf: all-MiniLM-L6-v2
-# - hf_inst: hkunlp/instructor-xl
 EMBEDDING_MODEL=bge-m3
 
 EMBEDDING_MAX_LENGTH=5000
@@ -62,15 +36,6 @@ TEXT_CHUNK_OVERLAP=256
 TRANSLATION_LANG=vietnamese
 
 SUMMARY_MAX_LENGTH=20000
-
-#########################################
-# YouTube options
-#########################################
-# Extract transcript from YouTube video by the following language list
-# Format: lang1[,lang2,...]
-# Example: en
-# Default: en
-## YOUTUBE_TRANSCRIPT_LANGS=
 
 
 #########################################
@@ -110,11 +75,8 @@ ACTION_DEEPDIVE_ENABLED=true
 ACTION_DEEPDIVE_ITERATIONS=1
 
 # GPT4 Turbo (128k tokens)
-AUTOGEN_GPT4_MODEL=gpt-4-0125-preview
-AUTOGEN_GPT4_API_VERSION=2023-08-01-preview
+AUTOGEN_GPT4_MODEL=gpt-4o
 AUTOGEN_GPT4_API_KEY=
-
-# GPT3.5 Turbo (16k tokens)
-AUTOGEN_GPT3_MODEL=gpt-3.5-turbo-0125
-AUTOGEN_GPT3_API_VERSION=2023-08-01-preview
-AUTOGEN_GPT3_API_KEY=
+AUTOGEN_GPT3_MODEL=gpt-4o
+AUTOGEN_GPT4_API_KEY=
+HOSTNAME=thetai
